--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="mySection section-home">
         <div class="myContainer section-home-container">
             <div class="section-home-container-desc">
-                <h1 class="section-home-container-desc-title">Hi, I'm <span class='newStyle'>Malik Khubiev</span> and I'm <span class='blue'>front-end developer</span></h1>
+                <h1 class="section-home-container-desc-title">Hi, I'm <span class='newStyle'>Malik Khubiev</span> and I'm a <span class='blue'>teacher</span></h1>
                 <p class="text section-home-container-desc-text">I want to show you <span class='green'>what I can</span></p>
                 <a class='scroll' href="#aboutMe"><button class="section-home-container-desc-button">about me</button></a>
             </div>
@@ -80,29 +80,6 @@
                                     <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>jQuery</li>
                                     <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>CSS styles from Bootstrap</li>
                                     <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>API Яндекс.Карт</li>
-                                </ul>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="section-myProjects-container-sliderBox-mainPart">
-                    <div class="section-myProjects-container-sliderBox-mainPart-content">
-                        <a target="_blank" href="https://malikkhubiev.github.io/BestSocialNetwork/">
-                            <div class="section-myProjects-container-sliderBox-mainPart-content-image">
-                                <img src="img/socialNetwork.png">
-                                <div class="section-myProjects-container-sliderBox-mainPart-content-image-name">
-                                    <p class="section-myProjects-container-sliderBox-mainPart-content-image-name-title newStyle">Social Network</p>
-                                    <p class="section-myProjects-container-sliderBox-mainPart-content-image-name-desc">SPA</p>
-                                </div>
-                                <ul class="section-myProjects-container-sliderBox-mainPart-content-image-text">
-                                    <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>TypeScript</li>
-                                    <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>React</li>
-                                    <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>Redux</li>
-                                    <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>react-redux</li>
-                                    <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>redux-thunk</li>
-                                    <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>hooks</li>
-                                    <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>formik</li>
-                                    <li class='section-myProjects-container-sliderBox-mainPart-content-image-text-li'>react-router-dom</li>
                                 </ul>
                             </div>
                         </a>
@@ -186,7 +163,7 @@
                 <h1 class="section-contactMe-container-top-title">Con<span class='newStyle'>tact</span> <span class='green'>me</span></h1>
             </div>
             <div class="section-contactMe-container-bottom">
-                <img src="./img/me.png" class="section-contactMe-container-bottom-image"/>
+                <img src="./img/me.jpeg" class="section-contactMe-container-bottom-image"/>
                 <div class="section-contactMe-container-bottom-desc">
                     <p class="section-contactMe-container-bottom-desc-text">malik.hubiev@mail.ru</p>
                     <p class="section-contactMe-container-bottom-desc-text">8-905-420-64-99</p>
